fix: исправлен баг с отображением комментариев у задач